--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,18 +2,18 @@ datastax-java-driver {
   
   basic.load-balancing-policy.class = DefaultLoadBalancingPolicy
   
-  advanced.retry-policy {
-    class = de.ba.elos.vfbbo.cassandra.config.ConsistencyRetryPolicy
-  }
+  #advanced.retry-policy {
+  #  class = de.ba.elos.vfbbo.cassandra.config.ConsistencyRetryPolicy
+  #}
   
 
   basic.request {
-        consistency = EACH_QUORUM
-        serial-consistency = SERIAL
+        consistency = LOCAL_QUORUM #EACH_QUORUM
+        serial-consistency = LOCAL_QUORUM #SERIAL
         timeout = 10 seconds
   }
   
-  basic.session-name = vfbbo-session
+  basic.session-name = vals-session
   
   advanced.control-connection {
         schema-agreement {
@@ -30,7 +30,7 @@ datastax-java-driver {
 
   # DataStax Insights monitoring.
   basic.application {
-    name = vfbbo
+    name = my-app
   }
   advanced.request-tracker {
     # The class of the tracker. If it is not qualified, the driver assumes that it resides in the
