--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.aseno.spikes</groupId>
   <artifactId>mycass</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
   
   <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.3.RELEASE</version>
+		<version>2.5.6</version>
 	</parent>
 
 	<properties>
@@ -15,6 +15,7 @@
 		<!-- Core -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>11</java.version>
+		 <start-class>de.aseno.spikes.Application</start-class>
 
 		<!-- Cassandra driver -->
 		<cassandra-java-driver.version>4.8.0</cassandra-java-driver.version>
