--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,8 +8,8 @@ datastax-java-driver {
   
 
   basic.request {
-        consistency = LOCAL_QUORUM #EACH_QUORUM
-        serial-consistency = LOCAL_QUORUM #SERIAL
+        consistency = EACH_QUORUM
+        serial-consistency = SERIAL
         timeout = 10 seconds
   }
   
