back from prototype

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,13 +10,13 @@ services:
               environment:
                      - ENV_PROFILES=vfo
                      - CASS_LOCAL_DC=rz1
-                     - CASS_KEYSPACE=shop
+                     - CASS_KEYSPACE=metest
                      - CASS_CONTACT_POINTS=cassandra1,cassandra2,cassandra4,cassandra5 #172.19.0.2 ,172.19.0.3 #,130.229.106.86 #
                      - CASS_PORT=9042
                      - CASS_USER=elos
                      - CASS_PWD=password
-                     - CASS_CL=EACH_QUORUM
-                     - CASS_SCL=LOCAL_QUORUM
+                     - CASS_CL=LOCAL_QUORUM
+                     - CASS_SCL=SERIAL #LOCAL_SERIAL
 
 networks:
   cassnet:
