--- a/src/main/resources/application-vfo.yml
+++ b/src/main/resources/application-vfo.yml
@@ -29,7 +29,10 @@ driver.localdc: ${CASS_LOCAL_DC}
 driver.keyspace: ${CASS_KEYSPACE}
 driver.consistency: ${CASS_CL}
 driver.serialConsistency: ${CASS_SCL}
-driver.retryPolicy: de.aseno.spikes.ConsistencyRetryPolicy
+#driver.retryPolicy: de.aseno.spikes.ConsistencyRetryPolicy
+#driver.retryPolicy: com.datastax.oss.driver.internal.core.retry.DefaultRetryPolicy
+driver.retryPolicy: ${CASS_RETRY_POLICY}
+driver.sessionName: val-sess
 driver.pageSize: 8
 driver.username: ${CASS_USER}
 driver.password: ${CASS_PWD}
