--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,7 +3,7 @@ datastax-java-driver {
   basic.load-balancing-policy.class = DefaultLoadBalancingPolicy
   
   #advanced.retry-policy {
-  #  class = de.ba.elos.vfbbo.cassandra.config.ConsistencyRetryPolicy
+  #  class = de.aseno.spikes.ConsistencyRetryPolicy
   #}
   
 
