--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,10 +13,11 @@ services:
                      - CASS_KEYSPACE=myks
                      - CASS_CONTACT_POINTS=cassandra1,cassandra2,cassandra4,cassandra5 #172.19.0.2 ,172.19.0.3 #,130.229.106.86 #
                      - CASS_PORT=9042
-                     - CASS_USER=elos
+                     - CASS_USER=aseno
                      - CASS_PWD=password
                      - CASS_CL=EACH_QUORUM
                      - CASS_SCL=SERIAL #LOCAL_SERIAL
+                     - CASS_RETRY_POLICY=de.aseno.spikes.ConsistencyRetryPolicy #com.datastax.oss.driver.internal.core.retry.DefaultRetryPolicy #
 
 networks:
   cassnet:
