--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring.application.name: spring-data-service
 
-server.port: 8081
+server.port: 8080
 
 #management.server.port: 8082
 
@@ -9,8 +9,8 @@ spring.data.cassandra:
   port: 9042
   local-datacenter: datacenter1
   keyspace-name: shop
-  username: cassandra # ${ASTRA_DB_USERNAME}
-  password: cassandra # ${ASTRA_DB_PASSWORD}
+  username: aseno # ${ASTRA_DB_USERNAME}
+  password: password # ${ASTRA_DB_PASSWORD}
   # Create the schema on the fly if it doesn't exist
   schema-action: CREATE_IF_NOT_EXISTS
   # Increase timeouts when connecting to Astra from a dev workstation
