--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,9 @@ target/
 # BlueJ files
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# VS Code
+.vscode
+.devcontainer
 
 # Package Files #
 *.jar
