--- a/docker-compose-cass-cluster.yaml
+++ b/docker-compose-cass-cluster.yaml
@@ -1,4 +1,4 @@
-version: '2' 
+version: '3.9' 
 
 # docker network create -d bridge cassnet
 networks:
@@ -19,7 +19,7 @@ services:
     environment: # The first two nodes (per dc) will be seeds
       - CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra4,cassandra5
       - CASSANDRA_PASSWORD_SEEDER=yes
-      - CASSANDRA_PASSWORD=cassandra
+      - CASSANDRA_PASSWORD=mycass123
       - CASSANDRA_CLUSTER_NAME=aseno-cass
       - CASSANDRA_DATACENTER=rz1
       - CASSANDRA_RACK=rack1
@@ -27,6 +27,7 @@ services:
       - CASSANDRA_NUM_TOKENS=256
       - CASSANDRA_HOST=cassandra1
       #- CASSANDRA_BROADCAST_ADDRESS=cassandra1
+      - CASSANDRA_TRANSPORT_PORT_NUMBER=7000
       - MAX_HEAP_SIZE=2G
       - HEAP_NEWSIZE=400M
 
@@ -42,15 +43,21 @@ services:
       - cassandra2_data:/bitnami
     environment:
       - CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra4,cassandra5 
-      - CASSANDRA_PASSWORD=cassandra
+      - CASSANDRA_PASSWORD=mycass123
       - CASSANDRA_CLUSTER_NAME=aseno-cass
       - CASSANDRA_DATACENTER=rz1
       - CASSANDRA_RACK=rack1
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_NUM_TOKENS=256
       #- CASSANDRA_BROADCAST_ADDRESS=cassandra2
+      - CASSANDRA_TRANSPORT_PORT_NUMBER=7000
+      #- CASSANDRA_INIT_SLEEP_TIME=8 #sec. default=5
       - MAX_HEAP_SIZE=2G
       - HEAP_NEWSIZE=400M
+    depends_on:
+      - cassandra1
+      - cassandra4
+
   cassandra3:
     container_name: cassandra3
     image: bitnami/cassandra:3.11.10
@@ -63,15 +70,22 @@ services:
       - cassandra3_data:/bitnami
     environment:
       - CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra4,cassandra5
-      - CASSANDRA_PASSWORD=cassandra
+      - CASSANDRA_PASSWORD=mycass123
       - CASSANDRA_CLUSTER_NAME=aseno-cass
       - CASSANDRA_DATACENTER=rz1
       - CASSANDRA_RACK=rack1
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_NUM_TOKENS=256
       #- CASSANDRA_BROADCAST_ADDRESS=cassandra3
+      - CASSANDRA_TRANSPORT_PORT_NUMBER=7000
+      #- CASSANDRA_INIT_SLEEP_TIME=8
       - MAX_HEAP_SIZE=2G
       - HEAP_NEWSIZE=400M
+    depends_on:
+      - cassandra1
+      - cassandra2
+      - cassandra4
+      - cassandra5
   cassandra4:
     container_name: cassandra4
     image: bitnami/cassandra:3.11.10
@@ -84,15 +98,20 @@ services:
       - cassandra4_data:/bitnami
     environment:
       - CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra4,cassandra5
-      - CASSANDRA_PASSWORD=cassandra
+      - CASSANDRA_PASSWORD=mycass123
       - CASSANDRA_CLUSTER_NAME=aseno-cass
       - CASSANDRA_DATACENTER=rz2
-      - CASSANDRA_RACK=rack2
+      - CASSANDRA_RACK=rack1
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_NUM_TOKENS=256
       #- CASSANDRA_BROADCAST_ADDRESS=cassandra4
+      - CASSANDRA_TRANSPORT_PORT_NUMBER=7000
+      #- CASSANDRA_INIT_SLEEP_TIME=8 #sec. default=5
       - MAX_HEAP_SIZE=2G
       - HEAP_NEWSIZE=400M
+    depends_on:
+      - cassandra1
+    
   cassandra5:
     container_name: cassandra5
     image: bitnami/cassandra:3.11.10
@@ -105,15 +124,20 @@ services:
       - cassandra5_data:/bitnami
     environment:
       - CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra4,cassandra5
-      - CASSANDRA_PASSWORD=cassandra
+      - CASSANDRA_PASSWORD=mycass123
       - CASSANDRA_CLUSTER_NAME=aseno-cass
       - CASSANDRA_DATACENTER=rz2
-      - CASSANDRA_RACK=rack2
+      - CASSANDRA_RACK=rack1
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_NUM_TOKENS=256
       #- CASSANDRA_BROADCAST_ADDRESS=cassandra5
+      - CASSANDRA_TRANSPORT_PORT_NUMBER=7000
+      #- CASSANDRA_INIT_SLEEP_TIME=8 #sec. default=5
       - MAX_HEAP_SIZE=2G
       - HEAP_NEWSIZE=400M
+    depends_on:
+      - cassandra1
+      - cassandra4
 
   cassandra6:
     container_name: cassandra6
@@ -127,15 +151,22 @@ services:
       - cassandra6_data:/bitnami
     environment:
       - CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra4,cassandra5
-      - CASSANDRA_PASSWORD=cassandra
+      - CASSANDRA_PASSWORD=mycass123
       - CASSANDRA_CLUSTER_NAME=aseno-cass
       - CASSANDRA_DATACENTER=rz2
-      - CASSANDRA_RACK=rack2
+      - CASSANDRA_RACK=rack1
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_NUM_TOKENS=256
       #- CASSANDRA_BROADCAST_ADDRESS=cassandra6
+      - CASSANDRA_TRANSPORT_PORT_NUMBER=7000
+      #- CASSANDRA_INIT_SLEEP_TIME=8 #sec. default=5
       - MAX_HEAP_SIZE=2G
       - HEAP_NEWSIZE=400M
+    depends_on:
+      - cassandra1
+      - cassandra2
+      - cassandra4
+      - cassandra5
 
 volumes:
   cassandra1_data:
