--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
        - CASS_CL=EACH_QUORUM
        - CASS_SCL=SERIAL #LOCAL_SERIAL
        - CASS_RETRY_POLICY=com.datastax.oss.driver.internal.core.retry.DefaultRetryPolicy # de.aseno.spikes.ConsistencyRetryPolicy
-# note that the docker network must have been created in advance
+# note that the docker network must have been created !
 networks:
   cassnet:
        external: true
